CSS düzenlemeleri: margin, padding ve tasarım kuralları uygulandı.

--- a/index.html
+++ b/index.html
@@ -97,32 +97,32 @@
     <h2 class="title-class">Our Portfolio</h2>
     <ul>
         <li>
-            <img src="./images/BankingApp.jpg" alt="Banking App " width="360">
+            <img src="./images/Banking App.jpg" alt="Banking App " width="360">
             <h3 class="subtitle-class">Banking App</h3>
             <p class="text-class">App</p>
         </li>
         <li>
-            <img src="./images/CashlessPaymen.jpg" alt="Cashless Payment " width="360">
+            <img src="./images/Cashless Paymen.jpg" alt="Cashless Payment " width="360">
             <h3 class="subtitle-class">Cashless Payment</h3>
             <p class="text-class">Marketing</p>
         </li>
         <li>
-            <img src="./images/MeditationApp.jpg" alt="Meditation App " width="360">
+            <img src="./images/Meditation app.jpg" alt="Meditation App " width="360">
             <h3 class="subtitle-class">Meditation App</h3>
             <p class="text-class">App</p>
         </li>
         <li>
-            <img src="./images/TaxiService.jpg" alt="Taxi Service " width="360">
+            <img src="./images/Taxi Service.jpg" alt="Taxi Service " width="360">
             <h3 class="subtitle-class">Taxi Service</h3>
             <p class="text-class">Marketing</p>
         </li>
         <li>
-            <img src="./images/ScreenIllustrations.jpg" alt="Screen Illustrations" width="360">
+            <img src="./images/Screen Illustrations.jpg" alt="Screen Illustrations" width="360">
             <h3 class="subtitle-class">Screen Illustrations</h3>
             <p class="text-class">Design</p>
         </li>
         <li>
-            <img src="./images/OnlineCourses.jpg" alt="Online Courses" width="360">
+            <img src="./images/Online Courses.jpg" alt="Online Courses" width="360">
             <h3 class="subtitle-class">Online Courses</h3>
             <p class="text-class">Marketing</p>
         </li>
