--- a/index.html
+++ b/index.html
@@ -11,24 +11,26 @@
 <body>
    
     
-<header>
-    <nav>
+<header class="header-main">
+    <div class="header-container container">
+    <nav class="nav-bar">
         <a href="./index.html" class="site-logo">
             Web<span class="studio-text">Studio</span>
         </a>
-        <ul>
-            <li><a href="./index.html" class="nav-link-home">Home</a></li>
+        <ul class="nav-links">
+            <li><a href="./index.html" class="nav-link-studio">Home</a></li>
             <li><a href="#" class="nav-link-portfolio">Portfolio</a></li>
             <li><a href="#" class="nav-link-contact">Contacts</a></li>
         </ul>
     </nav>
 
     <address class="contact-info">
-        <ul>
+        <ul class="contact-list">
             <li><a href="mailto:info@example.com" class="contact-email">info@example.com</a></li>
             <li><a href="tel:+1234567890" class="contact-phone">+123 456 7890</a></li>
         </ul>
     </address>
+</div>
 </header>
 
 <main>
