--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebStudio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <title>Web Studio</title>
+    <!-- Modern Normalize -->
+    <link rel="stylesheet" href="modern-normalize.min.css">
+    <!-- Temel Stil Dosyası -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
    
     
 <header class="header-main">
-    <div class="header-container container">
+    <div class="header-container-container">
     <nav class="nav-bar">
         <a href="./index.html" class="site-logo">
             Web<span class="studio-text">Studio</span>
