--- a/index.html
+++ b/index.html
@@ -138,18 +138,15 @@
 </main>
 
 
-<footer class="footer-section">
-    <a href="#" class="logo-class">
-<span class="studio-span">Studio</span>
-
-
-    </a>
-    <p class="footer-paragraph">
-        Increase the flow of customers and sales for your business with digital marketing & growth solutions
-    </p>
-
-
+<footer class="site-footer">
+    <div class="container">
+        <a href="#" class="footer-logo">
+            WEB<span class="footer-highlight">STUDIO</span>
+        </a>
+        <p class="footer-text">
+            Increases the flow of customers and scales for your business with original marketing & growth solutions.
+        </p>
+    </div>
 </footer>
-
 </body>
 </html>
