--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
    
-    
+    <!-- Header -->  
 <header class="header-main">
     <div class="header-container-container">
     <nav class="nav-bar">
@@ -35,15 +35,19 @@
 </header>
 
 <main>
+  <!-- 1. Section -->  
 <section class="main-section">
+    <div class="container">
     <h1 class="main-title">Effective Solutions for Your Business</h1>
     <button class="order-button">Order Service</button>
+    </div>
 </section>
 
-
+<!-- 2. Section -->
 <section class="services-section">
+    <div class="container">
     <h2 class="section-title">Our Services</h2>
-    <ul>
+    <ul class="services-list">
         <li class="service-item">
             <h3 class="service-title">Strategy</h3>
             <p class="service-description">Our goal is to identify the business problem to walk away with the perfect
@@ -65,6 +69,7 @@
                 for problem-solving.</p>
         </li>
     </ul>
+    </div>
 </section>
 
 
