--- a/index.html
+++ b/index.html
@@ -73,31 +73,42 @@
 </section>
 
 
- 
+ <!-- 3. Section -->
     <section class="team-section">
+        <div class="container">
         <h2 class="team-title">Our Team</h2>
-        <ul>
+        <ul class="team-list">
+          
             <li class="team-member">
+                <div class="member-details">
                 <img src="./images/Mark.jpg" alt="Mark Guerrero" width="264">
                 <h3 class="team-member-title">Mark Guerrero</h3>
                 <p class="team-member-role">Product Designer</p>
-            </li>
+            </div>
+         </li>
             <li class="team-member">
+                <div class="member-details">
                 <img src="./images/Ford.jpg" alt="Tom Ford" width="264">
                 <h3 class="team-member-title">Tom Ford</h3>
                 <p class="team-member-role">Frontend Developer</p>
-            </li>
+            </div>
+        </li>
             <li class="team-member">
+                <div class="member-details">
                 <img src="./images/camila.jpg" alt="Camila Garcia" width="264">
                 <h3 class="team-member-title">Camila Garcia</h3>
                 <p class="team-member-role">Marketing</p>
-            </li>
+                </div>
+             </li>
             <li class="team-member">
+                <div class="member-details">
                 <img src="./images/Daniel.jpg" alt="Daniel Wilson" width="264">
                 <h3 class="team-member-title">Daniel Wilson</h3>
                 <p class="team-member-role">UI Designer</p>
-            </li>
+                </div>
+             </li>
         </ul>
+        </div>
     </section>
 
 <!-- Portfolio bölümü -->
