--- a/index.html
+++ b/index.html
@@ -80,29 +80,29 @@
         <ul class="team-list">
           
             <li class="team-member">
-                <div class="member-details">
                 <img src="./images/Mark.jpg" alt="Mark Guerrero" width="264">
+                <div class="member-details">
                 <h3 class="team-member-title">Mark Guerrero</h3>
                 <p class="team-member-role">Product Designer</p>
             </div>
          </li>
-            <li class="team-member">
-                <div class="member-details">
+            <li class="team-member"> 
                 <img src="./images/Ford.jpg" alt="Tom Ford" width="264">
+                <div class="member-details">
                 <h3 class="team-member-title">Tom Ford</h3>
                 <p class="team-member-role">Frontend Developer</p>
             </div>
         </li>
             <li class="team-member">
-                <div class="member-details">
                 <img src="./images/camila.jpg" alt="Camila Garcia" width="264">
+                <div class="member-details">
                 <h3 class="team-member-title">Camila Garcia</h3>
                 <p class="team-member-role">Marketing</p>
                 </div>
              </li>
             <li class="team-member">
-                <div class="member-details">
                 <img src="./images/Daniel.jpg" alt="Daniel Wilson" width="264">
+                <div class="member-details">
                 <h3 class="team-member-title">Daniel Wilson</h3>
                 <p class="team-member-role">UI Designer</p>
                 </div>
@@ -111,41 +111,67 @@
         </div>
     </section>
 
-<!-- Portfolio bölümü -->
-<section class="section-class">
+<!-- 4.section Portfolio bölümü -->
+<section class="app-section">
+    <div class="container">
     <h2 class="title-class">Our Portfolio</h2>
-    <ul>
-        <li>
+
+    <ul class="app-list">
+        <li class="app-item">
+            <div class="app-card">
             <img src="./images/Banking App.jpg" alt="Banking App " width="360">
+            <div class="app-info">
             <h3 class="subtitle-class">Banking App</h3>
             <p class="text-class">App</p>
+            </div>
+            </div>
         </li>
-        <li>
+        <li class="app-item">
+            <div class="app-card">
             <img src="./images/Cashless Paymen.jpg" alt="Cashless Payment " width="360">
+            <div class="app-info">
             <h3 class="subtitle-class">Cashless Payment</h3>
             <p class="text-class">Marketing</p>
-        </li>
-        <li>
+        </div>
+    </div>
+    <li class="app-item">
+        <div class="app-card">
             <img src="./images/Meditation app.jpg" alt="Meditation App " width="360">
+            <div class="app-info">
             <h3 class="subtitle-class">Meditation App</h3>
             <p class="text-class">App</p>
+        </div>
+    </div>
         </li>
-        <li>
+        <li class="app-item">
+            <div class="app-card">
             <img src="./images/Taxi Service.jpg" alt="Taxi Service " width="360">
+            <div class="app-info">
             <h3 class="subtitle-class">Taxi Service</h3>
             <p class="text-class">Marketing</p>
+            </div>
+            </div>
         </li>
-        <li>
+        <li class="app-item">
+            <div class="app-card">
             <img src="./images/Screen Illustrations.jpg" alt="Screen Illustrations" width="360">
+            <div class="app-info">
             <h3 class="subtitle-class">Screen Illustrations</h3>
             <p class="text-class">Design</p>
+        </div>
+    </div>
         </li>
-        <li>
+        <li class="app-item">
+            <div class="app-card">
             <img src="./images/Online Courses.jpg" alt="Online Courses" width="360">
+            <div class="app-info">
             <h3 class="subtitle-class">Online Courses</h3>
             <p class="text-class">Marketing</p>
+            </div>
+            </div>
         </li>
     </ul>
+</div>
 </section>
 
 
